name:                pokemon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pokemon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyPokemon, GameMaster, PokemonBase, Epic, Move, Type
  other-modules:       Stats, StringMap
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5, yaml, vector, text,
                       unordered-containers, exceptions, hashable
                     , text-conversions
                     , regex-compat
  default-language:    Haskell2010

executable counter-exe
  hs-source-dirs:      app
  main-is:             Counter.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
  default-language:    Haskell2010

executable mine-exe
  hs-source-dirs:      app
  main-is:             Mine.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
  default-language:    Haskell2010

executable dump-exe
  hs-source-dirs:      app
  main-is:             Dump.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
  default-language:    Haskell2010

test-suite pokemon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pokemon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pokemon
