name:                pokemon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pokemon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MyPokemon, GameMaster, PokemonBase, TempEvoOverride,
                       Move, Type, Pokemon,
                       Cost, IVs, Calc, Mythical,
                       Epic,
                       Battle, Attacker, Defender, Debug, Log, Matchup,
                       Util, Weather, Friend, Logger, BattlerUtil, Yaml,
                       MakePokemon, Stats, PokeUtil, TweakLevel, Breakpoint,
                       Powerups, WeatherBonus, Legacy, Discounts,
                       PvpFastMove, PvpChargedMove,
                       PokemonClass,
                       YamlUtil,
                       Cup
  other-modules:       StringMap
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5, ghc, yaml, vector, text,
                       unordered-containers, exceptions, hashable
                     , text-conversions
                     , regex-compat
                     , range
                     , aeson
                     , scientific
                     , transformers
                     , monad-loops
                     , tuple
                     , text
                     , attoparsec
                     , optparse-applicative
                     , bytestring
                     , extra
                     , directory
                     , time
                     , store
                     , utility-ht
  default-language:    Haskell2010

executable effectivenessagainst-exe
  hs-source-dirs:      app
  main-is:             EffectivenessAgainst.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable whativs-exe
  hs-source-dirs:      app
  main-is:             Whativs.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable attack-exe
  hs-source-dirs:      app
  main-is:             Attack.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable plotatk-exe
  hs-source-dirs:      app
  main-is:             PlotAtk.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable plotiv-exe
  hs-source-dirs:      app
  main-is:             PlotIV.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , regex-compat
                     , optparse-applicative
                     , containers
  default-language:    Haskell2010

executable plotpowerups-exe
  hs-source-dirs:      app
  main-is:             PlotPowerups.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , regex-compat
                     , optparse-applicative
                     , containers
                     , unordered-containers
                     , text
                     , attoparsec
  default-language:    Haskell2010

executable breakpoints-exe
  hs-source-dirs:      app
  main-is:             Breakpoints.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , regex-compat
                     , optparse-applicative
                     , containers
  default-language:    Haskell2010

executable counter-exe
  hs-source-dirs:      app
  main-is:             Counter.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , regex-compat
                     , optparse-applicative
                     , containers
  default-language:    Haskell2010

executable sort-exe
  hs-source-dirs:      app
  main-is:             Sort.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , yaml
                     , bytestring
  default-language:    Haskell2010

executable spam-exe
  hs-source-dirs:      app
  main-is:             Spam.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , yaml
                     , attoparsec
                     , text
  default-language:    Haskell2010

executable best-exe
  hs-source-dirs:      app
  main-is:             Best.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , text
                     , attoparsec
                     , data-ordlist
  default-language:    Haskell2010

executable iv-exe
  hs-source-dirs:      app
  main-is:             IV.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , yaml
                     , bytestring
  default-language:    Haskell2010

executable univ-exe
  hs-source-dirs:      app
  main-is:             UnIV.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , yaml
                     , bytestring
  default-language:    Haskell2010

executable stardust-exe
  hs-source-dirs:      app
  main-is:             Stardust.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable level-exe
  hs-source-dirs:      app
  main-is:             Level.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable battler-exe
  hs-source-dirs:      app
  main-is:             Battler.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , attoparsec
                     , text
  default-language:    Haskell2010

executable elites-exe
  hs-source-dirs:      app
  main-is:             Elites.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , unordered-containers
                     , optparse-applicative
                     , hashable
                     , attoparsec
                     , text
                     , directory
                     , deepseq
  default-language:    Haskell2010

executable evolvecp-exe
  hs-source-dirs:      app
  main-is:             EvolveCp.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable bulk-exe
  hs-source-dirs:      app
  main-is:             Bulk.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable list-exe
  hs-source-dirs:      app
  main-is:             List.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , unordered-containers
                     , regex-compat
  default-language:    Haskell2010

executable boss-exe
  hs-source-dirs:      app
  main-is:             Boss.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
  default-language:    Haskell2010

executable tm-exe
  hs-source-dirs:      app
  main-is:             TM.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
                     , optparse-applicative
                     , unordered-containers
  default-language:    Haskell2010

executable mine-exe
  hs-source-dirs:      app
  main-is:             Mine.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
  default-language:    Haskell2010

executable dump-exe
  hs-source-dirs:      app
  main-is:             Dump.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pokemon
  default-language:    Haskell2010

test-suite pokemon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pokemon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pokemon
